--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>gowoo-portfoilo</title>
+    <meta property="url" content="https://react.dog">
+    <meta property="description" content="웹퍼블리셔 / 프론트앤드 고경우입니다.">
+    <meta property="og:type" content="website"> 
+    <meta property="og:title" content="개발자 고경우 포트폴리오">
+    <meta property="og:description" content="웹퍼블리셔 / 프론트앤드 고경우입니다.">
+    <meta property="og:url" content="https://react.dog">
+    <meta property="og:image" content="./assets/common/notfound/notfound.png">
+    <meta property="image" content="./assets/common/notfound/notfound.png">
+    <meta name="naver-site-verification" content="ea7f046da2bf45c5470ef75da8c27915820e8eb2" />
+    <title>고경우 - 포트폴리오</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
